--- a/Not-So-Super-Jaden/Not-So-Super-Jaden.vcxproj
+++ b/Not-So-Super-Jaden/Not-So-Super-Jaden.vcxproj
@@ -141,7 +141,7 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
-    <ClCompile Include="Start.cpp" />
+    <ClCompile Include="Level0.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -152,7 +152,7 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="ShaderProgram.h" />
-    <ClInclude Include="Start.h" />
+    <ClInclude Include="Level0.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
